[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/4.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Castle 2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Majin_buu_2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/crosshair.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/ARIAL.TTF"

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 104, 148 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Fonts/ARIAL.TTF"

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=8]
font_path = "res://Fonts/ARIAL.TTF"

[sub_resource type="DynamicFont" id=9]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 8 )

[node name="MajinBuu" type="Node2D"]
script = ExtResource( 1 )

[node name="bg" type="Sprite" parent="."]
position = Vector2( 640, 364 )
scale = Vector2( 1.33333, 1.01111 )
texture = ExtResource( 2 )

[node name="saying" type="Label" parent="."]
margin_left = 358.0
margin_top = 128.0
margin_right = 924.0
margin_bottom = 164.0
custom_fonts/font = SubResource( 6 )
text = "Wassup, You have 30 seconds to beat me."

[node name="BuuArea" type="Area2D" parent="."]
position = Vector2( 640, 340 )
collision_mask = 2

[node name="MajinBuu" type="Sprite" parent="BuuArea"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuuArea"]
shape = SubResource( 7 )

[node name="BuuHealth" type="Label" parent="."]
margin_left = 8.0
margin_right = 298.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 4 )
text = "MajinBuu Health: 20"
valign = 1

[node name="Crosshair" type="Sprite" parent="."]
position = Vector2( -200, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="countdown" type="Timer" parent="."]

[node name="change_pos" type="Timer" parent="."]
wait_time = 0.5

[node name="start" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="cd" type="Label" parent="."]
margin_left = 8.0
margin_top = 64.0
margin_right = 225.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 9 )
text = "Countdown: 30"

[connection signal="mouse_entered" from="BuuArea" to="." method="_on_BuuArea_mouse_entered"]
[connection signal="mouse_exited" from="BuuArea" to="." method="_on_BuuArea_mouse_exited"]
[connection signal="timeout" from="countdown" to="." method="_on_countdown_timeout"]
[connection signal="timeout" from="change_pos" to="." method="_on_change_pos_timeout"]
[connection signal="timeout" from="start" to="." method="_on_start_timeout"]
